--- a/home/css/login.css
+++ b/home/css/login.css
@@ -2,3 +2,83 @@
 	margin: 0;
 	padding: 0;
 }
+
+.loginform input {
+    padding: 15px 10px;
+}
+
+input#password {
+    width: 100%;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+input#acount {
+    width: 100%;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+form.loginform {
+    width: 500px;
+    border-radius: 20px!important;
+}
+
+img.img-fluid.logoimage {
+    border-radius: 40px;
+    background: white;
+    margin-bottom: 25px;
+    width: 200px;
+    height: 200px;
+}
+
+p.title {
+    color: white;
+    font-size: 30px;
+    text-align: center;
+}
+
+.loginbox {
+    position: absolute;
+    width: 500px;
+    top: 100px;
+    left: 50%;
+    z-index: 3;
+    margin-left: -250px;
+    text-align: center;
+}
+
+.logo {
+    position: absolute;
+    top: 10px;
+    left: 50px;
+    z-index: 3;
+    font-size: 40px;
+    font-weight: 400;
+    color: white;
+}
+
+.layer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    background: #000000c4;
+    width: 100%;
+    height: 800px;
+}
+
+img.img-fluid.backgroundimage {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    height: 800px;
+}
+
+.background {
+    position: relative;
+    overflow: hidden;
+    height: 800px;
+}
