--- a/home/css/welcome.css
+++ b/home/css/welcome.css
@@ -3,9 +3,102 @@
     padding: 0px;
 }
 
-img.banner-image {
-    height: 800px;
+p.go:hover {
+    transform: scale(1.5);
 }
+
+p.go {
+    margin-top: 50px;
+    background: #27ae60;
+    padding: 20px 30px;
+    display: inline-block;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: 0.4s;
+    color: white;
+    font-weight: bold;
+}
+
+p.lineright {
+    width: 100%;
+    height: 2px;
+    background: white;
+    margin-top: -18px;
+}
+
+p.lineleft {
+    width: 100%;
+    height: 2px;
+    background: white;
+}
+
+p.content {
+    font-size: 30px;
+}
+
+p.title {
+    text-transform: uppercase;
+    font-size: 80px;
+    font-weight: 100;
+}
+
+.box {
+    position: absolute;
+    top: 300px;
+    left: 50%;
+    z-index: 3;
+    width: 500px;
+    margin-left: -250px;
+    text-align: center;
+    color: white;
+}
+
+.blacklayer {
+    height: 800px;
+    width: 100%;
+    background: #00000094;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
+.banner {
+    height: 800px;
+    width: 100%;
+    position: relative;
+}
+
+a.nav-link.loginbutton:hover {
+    background: #27ae60!important;
+}
+
+a.nav-link.loginbutton {
+    border-radius: 20px;
+    background: #3498db;
+    color: white!important;
+    padding: 10px 20px!important;
+}
+
+.zoomin {
+    margin-top: 0px!important;
+    border-radius: 0px!important;
+    padding: 5px 50px!important;
+    background: black!important;
+}
+
+.layer {
+    width: 100%;
+    height: 100%;
+    background: #000000b5;
+    position: fixed;
+    z-index: 3;
+    transition: 0.4s;
+    visibility: hidden;
+    opacity: 0;
+}
+
+img.banner-image {width: 100%;position: absolute;top: 0;left: 0;z-index: 1;height: 800px;}
 
 button#barbutton {
     border-radius: 20px;
@@ -14,6 +107,11 @@ button#barbutton {
     border: 1px solid #3498db;
     background: #3498db;
     color: white;
+}
+
+button#barbutton:hover {
+    border-color: #f1c40f;
+    background: #f1c40f;
 }
 
 a#logo img {
@@ -26,9 +124,15 @@ a#logo {
 
 nav#bar {
     border-radius: 30px;
-    background: #000000bf!important;
+    background: #000000bf;
     position: fixed;
     width: 100%;
     padding: 15px 120px;
+    z-index: 10;
+    transition: 0.4s;
 }
 
+.show {
+    visibility: visible;
+    opacity: 1;
+}
