--- a/home/css/login.css
+++ b/home/css/login.css
@@ -35,7 +35,7 @@ input#password {
     border-bottom-right-radius: 15px;
 }
 
-input#acount {
+input#username {
     width: 100%;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
