--- a/home/css/style.css
+++ b/home/css/style.css
@@ -7,7 +7,7 @@
     margin-top: 0px!important;
     border-radius: 0px!important;
     padding: 5px 50px!important;
-    background: black!important;
+    background: #3498db!important;
 }
 
 div.col-4.tag a:hover {
