--- a/home/css/welcome.css
+++ b/home/css/welcome.css
@@ -3,6 +3,103 @@
     padding: 0px;
 }
 
+.more {
+    position: absolute;
+    top: 18%;
+    left: 50%;
+    z-index: 3;
+    width: 200px;
+    margin-left: -100px;
+    text-align: center;
+    opacity: 0;
+    transition: 0.4s;
+}
+
+.more a {
+    text-decoration: none;
+    color: white;
+    border-radius: 20px;
+    background: #3498db;
+    padding: 10px 40px;
+    font-size: 20px;
+    font-style: italic;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.item .content {
+    position: absolute;
+    background: white;
+    top: 350px;
+    left: 0;
+    z-index: 4;
+    padding: 5px 10px;
+    border-bottom: 3px solid #3498db;
+    width: 100%;
+    transition: 0.4s;
+    height: 298px;
+}
+
+.transperantlayer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    background: #000000a1;
+    width: 100%;
+    height: 350px;
+    transition: 0.4s;
+    opacity: 0;
+}
+
+.avatar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    overflow: hidden;
+}
+
+.avatar img {
+    width: 100%;
+    height: 350px;
+    transition: 0.4s;
+}
+
+.text-left.item {
+    border: 1px solid gray;
+    height: 490px;
+    margin-bottom: 20px;
+    position: relative;
+    overflow: hidden;
+}
+
+.text-left.item:hover .content {
+    transform: translateY(-160px);
+}
+
+.text-left.item:hover .more {
+    opacity: 1;
+}
+
+.text-left.item:hover .transperantlayer {
+    opacity: 1;
+}
+
+.text-left.item:hover img {
+    transform: scale(1.2);
+}
+
+.text-left.item:hover transperantlayer {
+    opacity: 1;
+}
+
+.text-center.item {
+    border: 1px solid gray;
+    height: 490px;
+    margin-bottom: 20px;
+}
+
 .line {
     height: 4px;
     position: relative;
