--- a/home/css/welcome.css
+++ b/home/css/welcome.css
@@ -5,18 +5,26 @@
 
 #department {
     border: 3px solid;
-    border-radius: 20px;
+    border-top-left-radius: 20px;
     height: 200px;
     overflow: auto;
     padding: 10px 20px;
 }
 
+#department .table {
+    width: 1500px;
+}
+
 #user {
     border: 3px solid;
-    border-radius: 20px;
+    border-top-left-radius: 20px;
     height: 200px;
     overflow: auto;
     padding: 10px 20px;
+}
+
+#user .table{
+    width: 1500px;
 }
 
 .usertable {padding-top: 150px;}
