--- a/home/css/welcome.css
+++ b/home/css/welcome.css
@@ -3,6 +3,11 @@
     padding: 0px;
 }
 
+p.clonetitle {
+    text-transform: uppercase;
+    font-size: 30px;
+}
+
 p.address {
     font-size: 18px;
     color: #3498db;
@@ -591,7 +596,8 @@ p.lineleft {
 }
 
 p.content {
-    font-size: 30px;
+    font-size: 20px;
+    color: gray;
 }
 
 p.title {
@@ -605,8 +611,8 @@ p.title {
     top: 300px;
     left: 50%;
     z-index: 3;
-    width: 500px;
-    margin-left: -250px;
+    width: 100%;
+    margin-left: -50%;
     text-align: center;
     color: white;
 }
