--- a/home/css/welcome.css
+++ b/home/css/welcome.css
@@ -102,6 +102,7 @@ p.departmentname {
     height: 300px;
     opacity: 0;
     visibility: hidden;
+    background: white;
 }
 
 #category .col-6.text-center.fields {
@@ -149,6 +150,7 @@ a.fieldelement:hover {
     transform: translateY(40px);
     overflow: auto;
     height: 300px;
+    background: white;
 }
 
 .result {
