--- a/home/css/welcome.css
+++ b/home/css/welcome.css
@@ -3,11 +3,38 @@
     padding: 0px;
 }
 
-#excelimport label {
+.showlayer, .showimport {
+    visibility: visible!important;
+    opacity: 1!important;
+}
+
+.showimport {
+    transform: scale(1)!important;
+}
+
+.homelayer {
+    
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background: #00000070;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.excelimport label {
     font-size: 20px;
 }
 
-#excelimport input {
+.normalimport label.title {
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.excelimport input {
     border: 2px solid #d9d9d9;
     padding: 5px 10px;
     border-radius: 15px;
@@ -15,11 +42,23 @@
     font-weight: bold;
 }
 
-div#excelimport {
+.excelimport, .normalimport {
     background: #f4f4f4;
+    height: 300px;
+    overflow: auto;
     border: 1px solid #d9d9d9;
     margin-top: 30px;
     padding: 20px 30px;
+    width: 50%;
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    margin-left: -25%;
+    z-index: 3;
+    transition: 0.4s;
+    opacity: 0;
+    transform: scale(0.4);
+    visibility: hidden;
 }
 
 p.clonetitle {
