--- a/home/css/style.css
+++ b/home/css/style.css
@@ -24,11 +24,17 @@
     transition: 0.4s;
 }
 
+.tabletitle {
+    width: 100%; 
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+}
+
 #topic {
     overflow: auto;
     height: 300px;
-    border: 3px solid;
-    border-top-left-radius: 20px;
+    border-top: 3px solid;
 }
 
 
