--- a/home/css/welcome.css
+++ b/home/css/welcome.css
@@ -3,6 +3,10 @@
     padding: 0px;
 }
 
+.editstaff {
+    display: none;
+}
+
 .status {
     margin-top: 30px; 
     color: white; 
@@ -787,4 +791,8 @@ nav#bar {
 .show {
     visibility: visible;
     opacity: 1;
+}
+
+.showbutton {
+    display: inline-block;
 }
