--- a/home/css/welcome.css
+++ b/home/css/welcome.css
@@ -96,6 +96,23 @@
     transition: 0.4s;
 }
 
+.fieldstatus {
+    margin-top: 30px; 
+    color: white; 
+    font-size: 20px;    
+    padding: 5px 10px;
+}
+
+.fieldstatus i:hover {
+    cursor: pointer;
+    color: black;
+    transform: scale(1.2);
+}
+
+.fieldstatus i {
+    transition: 0.4s;
+}
+
 
 .showlayer, .showimport {
     visibility: visible!important;
