--- a/home/css/welcome.css
+++ b/home/css/welcome.css
@@ -447,6 +447,11 @@ div#category p.title {
     opacity: 0;
 }
 
+.keyresult a {
+    text-decoration: none;
+    display: block;
+}
+
 .keyremove i {
     position: absolute;
     top: 10px;
@@ -1086,7 +1091,6 @@ nav#bar {
         transform: scale(4);
     }
 }
-
 
 
 
